--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-pwa": "^0.17.4",
     "vitest": "^4.0.18"
   }
 }
